--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Teemu Alaluusua
-logo: img/20250601_Teemu Alaluusua kuvaJPG.JPG
+logo: img/20250601_Teemu Alaluusua kuvaJPG – kopio.JPG
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
